Send SMS API  integration code completed and tested.