@@ -3,6 +3,7 @@ package com.app.sms;
 import java.io.UnsupportedEncodingException;
 import java.util.ArrayList;
 
+import org.apache.commons.codec.binary.Base64;
 import org.apache.http.HttpEntity;
 import org.apache.http.HttpResponse;
 import org.apache.http.NameValuePair;
@@ -15,21 +16,23 @@ import org.apache.http.util.EntityUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import com.app.util.ApplicationConstant;
+
 public class SmsExotelSenderImpl implements ISmsExotelSender {
 
 	private static final Logger log = LoggerFactory.getLogger(SmsExotelSenderImpl.class);
 	
 	@Override
-	public void sendSms(String to, String from, String body, String sid, String token, String type, String url) {
+	public void sendSms(String to, String from, String body, String sid, String token, String type) {
 		HttpClient hc = HttpClientBuilder.create().build();
 		ArrayList<NameValuePair> postParameters = new ArrayList<NameValuePair>();
 		postParameters.add(new BasicNameValuePair("From", from));
 		postParameters.add(new BasicNameValuePair("To", to));
 		log.info("Trying to send out message : " + type + ", To : " + to + ", Body : " + body);
 		
-		String out = body;
+		String out = "";
 		try {
-			out = new String(out.getBytes("UTF-8"), "ISO-8859-1");
+			out = new String(body.getBytes("UTF-8"), "ISO-8859-1");
 		} catch (UnsupportedEncodingException e1) {
 			log.error("===================**************=================");
 			log.error(e1.toString());
@@ -37,20 +40,25 @@ public class SmsExotelSenderImpl implements ISmsExotelSender {
 			return;
 		}
 		postParameters.add(new BasicNameValuePair("Body", out));
-
-		HttpPost post = new HttpPost(url);
-		String creds = sid + ":" + token;
-		System.out.println(creds);
-//		post.addHeader("Authorization", "Basic " + new BASE64Encoder().encode(creds.getBytes()));
-		try {
-			post.setEntity(new UrlEncodedFormEntity(postParameters));
-			post.setHeader("referer", "orobind");
-		} catch (UnsupportedEncodingException e) {
-			e.printStackTrace();
-			log.error("===================**************=================");
+		
+        String authStr = sid + ":" + token;
+        String url = "https://" + 
+                        authStr + "@twilix.exotel.in/v1/Accounts/" + 
+                        sid + "/Sms/send"; 
+        System.out.println(url);
+		byte[] authEncBytes = Base64.encodeBase64(authStr.getBytes());
+        String authStringEnc = new String(authEncBytes);
+        HttpPost post = new HttpPost(url);
+        post.setHeader("Authorization", "Basic " + authStringEnc);
+        try {
+            post.setEntity(new UrlEncodedFormEntity(postParameters));
+        } catch (UnsupportedEncodingException e) {
+            e.printStackTrace();
+            log.error("===================**************=================");
 			log.error(e.toString());
 			log.error("===================**************=================");
-		}
+        }
+		
 		
 		try {
 			HttpResponse response = hc.execute(post);
@@ -69,17 +77,19 @@ public class SmsExotelSenderImpl implements ISmsExotelSender {
 	}
 	
 	@Override
-	public void sendSms(String to, String body, String otp) {
-		String from = "LM-MYFITB";
+	public void sendSms(String to, String body) {
+		String from = "MYFITB";
 		String sid = "orbis1";
-		String token = "";
-		String type = "";
-		String url = "https://twilix.exotel.in/v1/Accounts/orobind/Sms/send";
-		sendSms(to, from, body, sid, token, type, url);
+		String token = "6805ddd2656eb9a025ac1a932c6378dc46a0b13f";
+		String type = "OTP";
+		sendSms(to, from, body, sid, token, type);
 	}
 	
 	public static void main(String arg[]){
 		SmsExotelSenderImpl sender = new SmsExotelSenderImpl();
-		sender.sendSms("8218182198", "Hi Dear, How are you? I'm missing you.", "9565");
+		String to = "7827760202";
+		String body = ApplicationConstant.smsMessageBody;
+		String smsText = String.format(body, "9586");
+		sender.sendSms(to, smsText);
 	}
 }
